# cryptatools-rs

./: .gitignore  404.html  Cargo.toml  README.md  TUTORIAL.md  chapter_1.html  chapter_2.html  chapter_3.html  chapter_4.html  contact.html  crates.js  help.html  index.html  licence.html  philosophy.html  print.html  search-index.js  searchindex.js  searchindex.json  settings.html  source-files.js  src-files.js  toc.html  toc.js
adler/: all.html  fn.adler32_slice.html  index.html  struct.Adler32.html
aho_corasick/: all.html  enum.ErrorKind.html  enum.MatchKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Match.html  struct.StreamFindIter.html  trait.StateID.html
anyhow/: all.html  fn.Ok.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  macro.format_err.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
approx/: all.html  index.html  macro.abs_diff_eq.html  macro.abs_diff_ne.html  macro.assert_abs_diff_eq.html  macro.assert_abs_diff_ne.html  macro.assert_relative_eq.html  macro.assert_relative_ne.html  macro.assert_ulps_eq.html  macro.assert_ulps_ne.html  macro.relative_eq.html  macro.relative_ne.html  macro.ulps_eq.html  macro.ulps_ne.html  struct.AbsDiff.html  struct.Relative.html  struct.Ulps.html  trait.AbsDiffEq.html  trait.RelativeEq.html  trait.UlpsEq.html
askama/: all.html  derive.Template.html  enum.Error.html  fn.read_config_file.html  fn.rerun_if_templates_changed.html  index.html  sidebar-items.js  struct.Html.html  struct.MarkupDisplay.html  struct.Text.html  (+3 more)
cryptatools-cli/: Cargo.toml
cryptatools-cli/src/brute_force_cryptanalysis/: cli_structure.rs  main.rs
cryptatools-cli/src/statistical_cryptanalysis/: cli_structure.rs  main.rs
cryptatools-core/: .bumpversion.cfg  Cargo.toml  build.rs  generate.bat  pyproject.toml  requirements.txt  setup.py
cryptatools-core/binding-testing/: testing.py
cryptatools-core/bindings/python3/cryptatools-core/: python3_bindings.py
cryptatools-core/bindings/python3/cryptatools-core/cryptanalysis/general_cryptanalysis_methods/frequency_analysis/: coincidence_index.py
cryptatools-core/bindings/python3/cryptatools-core/cryptography/encryption/monoalphabetic_cipher/: caesar_number.py
cryptatools-core/bindings/python3/cryptatools-core/cryptography/encryption/transpositional_ciphers/: columnar_transposition.py
cryptatools-core/bindings/python3/cryptatools-core/utils/: alphabets.py
cryptatools-core/cryptatools_python3.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cryptatools-core/src/: caesar_number.py  caesar_number.udl  cryptatools.udl  lib.rs
cryptatools-core/src/cryptanalysis/: mod.rs  plain_text_detector.rs
cryptatools-core/src/cryptanalysis/common/rsa/: common_modulus_attack.rs  mod.rs  public_exponent_attack.rs
cryptatools-core/src/cryptanalysis/custom/: mod.rs
cryptatools-core/src/cryptanalysis/custom/general_cryptanalysis_methods/: mod.rs
cryptatools-core/src/cryptanalysis/custom/general_cryptanalysis_methods/frequency_analysis/: coincidence_index.rs  mod.rs
cryptatools-core/src/cryptanalysis/custom/general_cryptanalysis_methods/frequency_analysis/coincidence_index/: mod.rs
cryptatools-core/src/cryptanalysis/custom/general_cryptanalysis_methods/frequency_analysis/coincidence_index/engine/: coincidence_index.rs  mod.rs
cryptatools-core/src/cryptanalysis/custom/general_cryptanalysis_methods/frequency_analysis/coincidence_index/modules/: mod.rs  vigenere_coincidence_index.rs
cryptatools-core/src/cryptanalysis/custom/general_cryptanalysis_methods/frequency_analysis/distribution_algorithms/: mod.rs  statistical.rs
cryptatools-core/src/cryptanalysis/custom/general_cryptanalysis_methods/hash_cryptanalysis/: birthday_paradox.rs
cryptatools-core/src/cryptanalysis/general_cryptanalysis_methods/: mod.rs
cryptatools-core/src/cryptanalysis/general_cryptanalysis_methods/frequency_analysis/: coincidence_index.rs
cryptatools-core/src/cryptanalysis/general_cryptanalysis_methods/frequency_analysis/distribution_algorithms/: statistical.rs
cryptatools-core/src/cryptanalysis/general_cryptanalysis_methods/hash_cryptanalysis/: birthday_paradox.rs  mod.rs
cryptatools-core/src/cryptanalysis/know_plaintext_attacks/: mod.rs
cryptatools-core/src/cryptanalysis/know_plaintext_attacks/matsui_s_algorithm/: algorithm_one.rs  mod.rs
cryptatools-core/src/cryptography/: mod.rs
cryptatools-core/src/cryptography/classical/encryption/: mod.rs
cryptatools-core/src/cryptography/classical/encryption/monoalphabetic_ciphers/: caesar_number.rs  mod.rs
cryptatools-core/src/cryptography/classical/encryption/polyalphabetic_ciphers/: vigenere.rs
cryptatools-core/src/cryptography/classical/encryption/transpositional_ciphers/: columnar_transposition.rs
cryptatools-core/src/cryptography/encoding/: alphabets.rs  mod.rs
cryptatools-core/src/cryptography/encryption/: caesar_number.rs  mod.rs
cryptatools-core/src/cryptography/encryption/monoalphabetic_ciphers/: caesar_number.rs
cryptatools-core/src/cryptography/encryption/polyalphabetic_ciphers/: mod.rs  vigenere.rs
cryptatools-core/src/cryptography/encryption/transpositional_ciphers/: columnar_transposition.rs  mod.rs
cryptatools-core/src/cryptography/modern/: mod.rs
cryptatools-core/src/maths/: ECC.rs  factoring.rs  factorization.rs  is_prime.rs  mod.rs
cryptatools-core/src/utils/: alphabets.rs  convert.rs  mod.rs
doc-examples/ethereum-colision-evaluation/: Cargo.toml
doc-examples/ethereum-colision-evaluation/src/: main.rs
doc-examples/ethereum-wallet-collision-with-web3js-node/: Cargo.toml  README.md  index.js  package-lock.json  package.json
docs/doc-examples/caesar_shellcode_statistical_analysis/: Cargo.toml
docs/doc-examples/caesar_shellcode_statistical_analysis/data/: bin  how-to-compile-opcode.sh  opcode.txt  shellcode.txt
docs/doc-examples/caesar_shellcode_statistical_analysis/src/: main.rs
docs/doc-examples/ethereum-wallet-collision-with-web3js/: Cargo.toml
(+18758 files in other folders)
