[package]
name = "cryptatools-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptatools-core = { path = "cryptatools-core", version = "0.1.0" }
once_cell = "*"
indexmap = "1.9.1"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "cryptatools_benchmark"
harness = false

[workspace]
members = [
    "cryptatools-core",
    "cryptatools-cli",
    "cryptatools-gui"
]