[package]
name = "cryptatools-rs"
version = "0.1.2"
edition = "2021"

[dependencies]
cryptatools-core = { path = "cryptatools-core", version = "0.1.2" }
once_cell = "*"
indexmap = "1.9.1"
uniffi_bindgen = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "cryptatools_benchmark"
harness = false

[workspace]
members = [
    "cryptatools-core",
    "cryptatools-cli",
    "cryptatools-gui",
	"docs/doc-examples/ethereum-colision-evaluation",
    "docs/doc-examples/ethereum-wallet-collision-with-web3js",
    "docs/doc-examples/ethereum-wallet-collision-with-web3js-node",
    "docs/doc-examples/caesar_shellcode_statistical_analysis"
]