[package]
name = "cryptatools-rs"
version = "0.1.20"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust crate providing cryptographic tools and utilities."

[dependencies]
cryptatools-core = { path = "cryptatools-core", version = "0.1.20" }
once_cell = "*"
indexmap = "1.9.1"
uniffi_bindgen = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "cryptatools_benchmark"
harness = false

[workspace]
members = [
    "cryptatools-core",
    "cryptatools-cli",
    "cryptatools-gui",
	"docs/doc-examples/ethereum-colision-evaluation",
    "docs/doc-examples/ethereum-wallet-collision-with-web3js",
    "docs/doc-examples/ethereum-wallet-collision-with-web3js-node",
    "docs/doc-examples/caesar_shellcode_statistical_analysis"
, "docs/doc-examples/yara_false_positive"]
