[package]
name = "cryptatools-cli"
version = "0.1.0"
edition = "2021"
publish = ["cryptatools-cli"]
repository = "https://github.com/gogo2464/cryptatools-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
serde = "*"
serde_with = "*"
bimap = "*"
cryptatools-core = { path = "../cryptatools-core", package = 'cryptatools-core' }


[dependencies.clap]
version = "4"
default-features = false
features = [ "std", "unstable-doc", "derive"]

[[bin]]
name = "cryptatools-cli-stats"
path = "src/statistical_cryptanalysis/main.rs"
