[package]
name = "cryptatools-cli"
version = "0.1.0"
edition = "2021"
publish = ["crates-io"]
repository = "https://github.com/gogo2464/cryptatools-rs"
license = "MIT OR Apache-2.0"
description = "A Rust crate providing cryptographic tools and utilities."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.143"
serde = "1.0.219"
serde_with = "3.14.0"
bimap = "0.6.3"
cryptatools-core = { path = "../cryptatools-core", package = 'cryptatools-core', version = "0.1.14"}

[dependencies.clap]
version = "4"
default-features = false
features = [ "std", "unstable-doc", "derive"]

[[bin]]
name = "cryptatools-cli-stats"
path = "src/statistical_cryptanalysis/main.rs"
