[package]
name = "cryptatools-core"
version = "0.1.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = {version = "*", features = [ "cli" ]}
uniffi_macros = "*"
lingua = { version = "1.4.0", default-features = true }
assert_float_eq = "1.1.3"
approx = "*"
bimap = "*"
once_cell = "*"
itertools = "*"
uniffi_bindgen = "*"
time = "*"
rand = "*"
num-traits = "*"
num = "*"
num-bigfloat = "*"
num-bigint = { version = "*", features = [] } #"prime", "rand"
num-bigint-dig = { version = "*", features = ["prime", "rand"], default-features=false }
num-integer = "*"

indicatif = { version = "0.17", optional = true }
primal = "0.3"
thiserror = "1"

[build-dependencies]
uniffi = {version = "*", features = [ "build", "cli" ]}

[lib]
name = "cryptatools_core"
crate-type = ["cdylib", "rlib"]
doctest = true
doc = true

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"