[package]
name = "cryptatools-core"
version = "0.1.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = {version = "0.27.3", features = [ "cli" ]}
uniffi_macros = "0.27.3"
lingua = { version = "1.4.0", default-features = true }
assert_float_eq = "1.1.3"
approx = "*"
bimap = "*"
once_cell = "*"
itertools = "*"
uniffi_bindgen = "0.27.3"
time = "*"
rand = "*"
num-bigint = "*"
num-traits = "*"
num = "*"
num-bigfloat = "*"

[build-dependencies]
uniffi = {version = "0.27.3", features = [ "build", "cli" ]}

[lib]
name = "cryptatools_core"
crate-type = ["cdylib", "rlib"]
doctest = true
doc = true

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
