[package]
name = "cryptatools-core"
version = "0.1.20"
edition = "2021"
publish = ["crates-io"]
repository = "https://github.com/gogo2464/cryptatools-rs"
license = "MIT OR Apache-2.0"
description = "A Rust crate providing cryptographic tools and utilities."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = {version = "0.27.3", features = [ "cli" ]}
uniffi_macros = "0.27.3"
lingua = { version = "1.4.0", default-features = true }
assert_float_eq = "1.1.3"
approx = "0.5.1"
bimap = "0.6.3"
once_cell = "1.21.3"
itertools = "0.14.0"
uniffi_bindgen = "0.27.3"
time = "0.3.43"
rand = "0.9.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"
num = "0.4.3"
num-bigfloat = "1.7.2"

[build-dependencies]
uniffi = {version = "0.27.3", features = [ "build", "cli" ]}

[lib]
name = "cryptatools_core"
crate-type = ["cdylib", "rlib"]
doctest = true
doc = true

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
