[package]
name = "ethereum-colision-evaluation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "*", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
eyre = "0.6"
cryptatools-core = { path = "../../cryptatools-core", package = 'cryptatools-core' }
#cryptatools-core = { git = "https://github.com/gogo2464/cryptatools-rs", package = 'cryptatools-core' }