[package]
name = "hello_world"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"
rust-version = "1.56"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
cryptatools-core = { path = "../../cryptatools-core", package = 'cryptatools-core' }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.64", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window']}